--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
+<h1>IOT 
+    <br>
+    <h3> by jagath kalyan </h3>
+</h1>
 <p>My first paragraph.</p>
 
 </body>
